<resources>
    <string name="app_name">Book Smart</string>

    <!-- Strings related to login -->
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="search_for_books">Search for Books</string>
    <string name="view_profile">View Profile</string>
    <string name="add_book">Add Book</string>
    <string name="log_out">Log Out</string>
    <string name="books_owned">Books Owned</string>
    <string name="books_wanted">Books Wanted</string>
    <string name="name">Name</string>
    <string name="isbn">ISBN</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings for adding a book -->

    <string name="check_box_sale_text">Available for Sale</string>
    <string name="dollar_sign">$</string>
    <string name="check_box_trade_text">Available for Trade</string>
    <string name="book_gallery_imgbtn_description">The button brings up a gallery of images for the book</string>
    <string name="camera_button_description">This button brings up the camera to take a picture of the book</string>


    <!-- Strings for searching a book -->

    <string name="search_button_description">This button will search for the specified book when clicked</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="author_s">Author(s)</string>
    <string name="condition">Condition</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="buy">Buy</string>
    <string name="search">Search</string>
    <string name="sell">Sell</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="phone_number">Phone Number</string>

    <string-array name="condition_array">
        <item>Excellent</item>
        <item>Good</item>
        <item>Fair</item>
        <item>Poor</item>
    </string-array>
</resources>
