<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cs4518_team6.booksmart.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_books"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_for_books" />

        <Button
            android:id="@+id/view_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_profile" />

        <Button
            android:id="@+id/add_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_book" />

        <Button
            android:id="@+id/log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
