<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cs4518_team6.wpireads.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/books_wanted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/books_wanted"
            android:gravity="center"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="150dp" >

        </ListView>

        <Button
            android:id="@+id/add_wanted_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_book" />

        <TextView
            android:id="@+id/books_owned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/books_owned"
            android:gravity="center"
            android:layout_marginTop="75dp"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="150dp" >

        </ListView>

        <Button
            android:id="@+id/add_owned_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_book" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
